starting over. Putting a div header to start body

--- a/index.html
+++ b/index.html
@@ -10,40 +10,13 @@
 
 <body>
 
-    <header>
-        header
-    </header>
+    <div class = "container">
+        <div class = "panel panel-header">
+            <p>header</p>
+        </div> 
+    </div>
 
-    <br>
-    
-    <nav>
-        nav
-    </nav>
-
-    <br>
-
-    <section>
-        section
-        <article>
-            article
-            <h1>
-                h1, h2, h3
-            </h1>
-            <p>
-                p
-            </p>
-        </article>
-    </section>
-
-    <aside>
-        aside
-    </aside>
-
-    <footer>footer</footer>
-
-
-    
 
 
 </body>
-</html>
+</html> 
