Fixed body styling and text centering in style.css; Added header id styling in style.css

--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Wireframe</title>
+    <link rel="stylesheet" type = "text/css" href = "style.css">
 </head>
 
 <body>
 
     <div class = "container">
-        <div class = "panel panel-header">
-            <p>header</p>
+        <div class = "text-center">
+            <p id = "header">header</p>
         </div> 
     </div>
-
-
 
 </body>
 </html> 
