--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 
     <div class = "container">
-        <div class = "text-center">
-            <p id = "header">header</p>
-        </div> 
+        <div class = "text-center" id = "header">header</div>
+        <br>
+        <div class = "text-center" id = "nav">nav</div>
     </div>
 
 </body>
