--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div class = "text-center" id = "header">header</div>
         <br>
         <div class = "text-center" id = "nav">nav</div>
+        <br>
+        <div class = "text-center" id = "footer">footer</div>
     </div>
 
 </body>
