--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <br>
         <div class = "text-center" id = "nav">nav</div>
         <br>
+        <div class = "text-center" id = "section">section</div>
         <div class = "text-center" id = "footer">footer</div>
     </div>
 
 </body>
-</html> 
+</html>
