--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class = "text-center" id = "header">header</div>
         <div class = "text-center" id = "nav">nav</div>
         <div class = "text-center" id = "section">section</div>
+        <div class = "text-center" id = "aside">aside</div>
         <div class = "text-center" id = "footer">footer</div>
     </div>
 
