--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <div class = "container">
         <div class = "text-center" id = "header">header</div>
         <div class = "text-center" id = "nav">nav</div>
-        <div class = "text-center" id = "section">section</div>
+        <div class = "text-center" id = "section">section
+            <div class = "text-center" id = "article">article
+            </div>
+        </div>
+        <!-- <div class = "text center" id = "article">article</div> -->
         <div class = "text-center" id = "aside">aside</div>
         <div class = "text-center" id = "footer">footer</div>
     </div>
