Added paragraph section to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <div class = "text-center" id = "nav">nav</div>
         <div class = "text-center" id = "section">section
             <div class = "text-center" id = "article">article
+                <div class = "text-center" id = "articleHeader"><strong>h1, h2, h3</strong></div>
+                <div class = "text-center" id = "paragraph"><p>p</p></div>
             </div>
         </div>
         <!-- <div class = "text center" id = "article">article</div> -->
