--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class = "text-center" id = "section">section
             <div class = "text-center" id = "article">article
                 <div class = "text-center" id = "articleHeader"><strong>h1, h2, h3</strong></div>
-                <div class = "text-center" id = "paragraph"><p>p</p></div>
+                <div class = "text-center" id = "paragraph">p</div>
             </div>
         </div>
         <!-- <div class = "text center" id = "article">article</div> -->
