Changed divs to header tags, nav tags, etc and changed css based on new information learned on 5/14/2019

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 <body>
 
     <div class = "container">
-        <div class = "text-center" id = "header">header</div>
-        <div class = "text-center" id = "nav">nav</div>
-        <div class = "text-center" id = "section">section
-            <div class = "text-center" id = "article">article
-                <div class = "text-center" id = "articleHeader"><strong>h1, h2, h3</strong></div>
-                <div class = "text-center" id = "paragraph">p</div>
-            </div>
+        <header>header</header>
+        <nav>nav</nav>
+        <div class = "clearfix">
+            <section>section
+                <article>article
+                    <div class = "text-center" id = "articleHeader"><strong>h1, h2, h3</strong></div>
+                    <div class = "text-center" id = "paragraph">p</div>
+                </article>
+            </section>
+            <aside>aside</aside>
         </div>
-        <!-- <div class = "text center" id = "article">article</div> -->
-        <div class = "text-center" id = "aside">aside</div>
-        <div class = "text-center" id = "footer">footer</div>
+        <footer>footer</footer>
     </div>
 
 </body>
